--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Node App demonstrating simple RESTFul API implementation",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --exit",
     "start": "node index.js"
   },
   "keywords": [
@@ -19,8 +19,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mocha": "^8.1.3",
     "mongoose": "^5.6.4",
     "serverless-http": "^2.6.0"
   }
