--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Node App demonstrating simple RESTFul API implementation",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --exit",
+    "test": "mocha test/pets.js --exit",
     "start": "node index.js"
   },
   "keywords": [
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "mocha": "^8.1.3",
     "mongoose": "^5.6.4",
+    "mongoose-sequence": "^5.2.2",
     "serverless-http": "^2.6.0"
   }
 }
